# AndroidNobetter

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/nobetter/ppshuai/androidnobetter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  nativehelper-lib.cpp
app/src/main/cpp/libjpeg-turbo-1.5.0/: jconfigint.h
app/src/main/cpp/libjson-1.8.0/: json_tool.h  json_tool.h.bak
app/src/main/cpp/utils/: base64.cpp  base64.h  crypt_helper.cpp  crypt_helper.h  curl_helper.cpp  curl_helper.h  img_conv.cpp  img_conv.h  md5.cpp  md5.h  mobile.cpp  mobile.h  rijndael.cpp  rijndael.h  utils.cpp  utils.h
app/src/main/java/com/nobetter/ppshuai/androidnobetter/: DBCipherHelper.java  DBCipherManager.java  MainActivity.java  NativeHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nobetter/ppshuai/androidnobetter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
